@@ -8,9 +8,10 @@ import lombok.AllArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 
+import javax.servlet.http.Cookie;
+import javax.servlet.http.HttpServletResponse;
 import javax.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @AllArgsConstructor
@@ -18,16 +19,16 @@ import java.util.stream.Collectors;
 public class BookController {
     BookService bookService;
 
-    @PostMapping
+    @PostMapping()
     @ResponseStatus(HttpStatus.CREATED)
-    public BookResponse saveBook(@Valid @RequestBody BookRequest book){
-        return BookMapper.bookToResponse(bookService.save(BookMapper.requestToBook(book)));
+    public BookResponse saveBook(@Valid @RequestBody BookRequest bookRequest){
+        return BookMapper.bookToResponse(bookService.save(BookMapper.requestToBook(bookRequest)));
     }
 
-    @GetMapping
+    @GetMapping()
     @ResponseStatus(HttpStatus.OK)
     public List<BookResponse>getAllBooks(){
-        return bookService.getAllBooks().stream().map(BookMapper::bookToResponse).collect(Collectors.toList());
+        return bookService.getAllBooks().stream().map(BookMapper::bookToResponse).toList();
     }
 
     @GetMapping("/{bookId}")
@@ -38,8 +39,8 @@ public class BookController {
 
     @PutMapping("/{bookId}")
     @ResponseStatus(HttpStatus.ACCEPTED)
-    public BookResponse updateBook(@PathVariable("bookId") String bookId, @Valid @RequestBody BookRequest book){
-        return BookMapper.bookToResponse(bookService.update(bookId, BookMapper.requestToBook(book)));
+    public BookResponse updateBook(@PathVariable("bookId") String bookId, @Valid @RequestBody BookRequest bookRequest){
+        return BookMapper.bookToResponse(bookService.update(bookId, BookMapper.requestToBook(bookRequest)));
     }
 
     @DeleteMapping("/{bookId}")
@@ -48,15 +49,24 @@ public class BookController {
         bookService.delete(bookId);
     }
 
-    @DeleteMapping
+    @DeleteMapping()
     @ResponseStatus(HttpStatus.OK)
     public void deleteMany(@RequestParam("bookId") List<String> bookId){
         bookService.deleteMany(bookId);
     }
 
-    @GetMapping("/cookie")
+    @GetMapping("/readCookie")
     @ResponseStatus(HttpStatus.OK)
-    public String readCookie(@CookieValue("name")String name){
-        return bookService.readCookie(name);
+    public String readCookie(@CookieValue("theme")String theme){
+        return "theme: "+theme;
+    }
+
+    @PostMapping("/setCookie")
+    public void setCookie(@CookieValue(value = "theme", defaultValue = "light")String theme,
+                          HttpServletResponse httpServletResponse){
+        Cookie cookie = new Cookie("theme", theme);
+        cookie.setMaxAge(2592000);
+        cookie.setPath("/v1/book");
+        httpServletResponse.addCookie(cookie);
     }
 }
